# globus-workflow

./: .editorconfig  .env.example  .gitignore  Makefile  README.md  pyproject.toml
compute/: README.md
compute/functions/: process_data.py
configs/: README.md  endpoints.yaml
configs/compute/: config.yaml
configs/flow_inputs/: template_input.json
docs/: README.md
examples/: README.md
examples/others/: globus_flow_status.cmd  globus_flow_status_token_remember.py  test_folder_check.py
examples/wandb/: fetch_latest_test_plot_from_wandb.py  query_epoch_number.py  query_epoch_number_w_total.py
flows/: README.md  deploy.py  flow.json  flow_config.yaml  globus_auth.py  globus_flow_run_cancel.py  globus_flow_status.py  info.txt  monitor_folder_flow_init.py  pbs_queue_check.py  query_epoch_number_w_total.py  sample_flow.py  utils.py
flows/definitions/: template_flow.json
flows/others/: globus_flow_status_token_remember.py  sample_compute_test.py  test_monitor_folder_flow_init.py  test_process_data.py
flows/wandb/: online_learning_run_plot.cmd
scripts/: README.md  transfer.py
secrets/: info.txt
tests/: __init__.py  pbs_queue_check.py  test_compute_endpoint.py  test_globus_tokens.py  test_placeholder.py  test_transfer_endpoints.py
utils/: README.md  __init__.py  auth.py  transfer.py
